# demo-artifacts

./: README.md
haskell-hasql/: my-space-music-catalogue-hasql.cabal  pgenie-artifacts-my-space-music-catalogue-hasql.cabal
java-jdbc/: pom.xml
java-jdbc/src/main/java/io/pgenie/artifacts/mySpace/musicCatalogue/javaJdbc/: InsertAlbumResultRow.java  MusicCatalogueStatements.java  SelectAlbumByArtistResultRow.java  SelectGenreByArtistResultRow.java  UpdateAlbumReleasedReturningResultRow.java
